[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Environment/WaterHazard.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="WaterHazard" type="Area2D"]
script = ExtResource( 1 )

[node name="DisablesWarning" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="ClearExceptionsTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_WaterHazard_body_entered"]
[connection signal="timeout" from="ClearExceptionsTimer" to="." method="clear_exceptions"]
